1P - Passing first test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(password_kata)
 set(CMAKE_CXX_STANDARD 14)
 
 set(source_files
-        )
+        src/Password.cpp src/Password.h)
 set(test_files
         test/main.test.cpp
         test/password.test.cpp)
